[package]
name = "nft-series"
version = "0.1.0"
authors = ["Matt Lockyer <mattdlockyer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/mattlockyer/near-sdk-rs", rev = "2a9a8fd" }
near-contract-standards = { git = "https://github.com/mattlockyer/near-sdk-rs", rev = "2a9a8fd" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
